--- a/src/lib/formats/CMakeLists.txt
+++ b/src/lib/formats/CMakeLists.txt
@@ -99,6 +99,8 @@ ENDIF(UNIX)
 FOREACH(FORMAT ${FORMATS})
   ADD_LIBRARY(${FORMAT} SHARED ${FORMAT}.cpp)
 
+  ADD_DEPENDENCIES(${FORMAT} obcore_shared)
+
   TARGET_LINK_LIBRARIES(${FORMAT} ${OBCORE_LIB_NAME})
 
   SET_TARGET_PROPERTIES(${FORMAT} PROPERTIES
@@ -117,6 +119,8 @@ ENDFOREACH(FORMAT ${FORMATS})
 SET(INCHI_FORMAT inchiformat)
 SET(INCHI_FORMAT_SRC inchiformat.cpp getinchi.cpp)
 ADD_LIBRARY(${INCHI_FORMAT} SHARED ${INCHI_FORMAT_SRC})
+
+ADD_DEPENDENCIES(${INCHI_FORMAT} obcore_shared inchi_shared)
 
 TARGET_LINK_LIBRARIES(${INCHI_FORMAT} ${OBCORE_LIB_NAME} ${INCHI_LIB_NAME})
 
