--- a/src/lib/formats/CMakeLists.txt
+++ b/src/lib/formats/CMakeLists.txt
@@ -101,6 +101,8 @@ FOREACH(FORMAT ${FORMATS})
                         OUTPUT_NAME ${FORMAT}
                         PREFIX "")
 
+  ADD_DEPENDENCIES(${FORMAT} obcore_shared)
+
   INSTALL(TARGETS
             ${FORMAT}
         DESTINATION
@@ -119,6 +121,8 @@ TARGET_LINK_LIBRARIES(${INCHI_FORMAT} ${OBCORE_LIB_NAME} ${INCHI_LIB_NAME})
 SET_TARGET_PROPERTIES(${INCHI_FORMAT} PROPERTIES
                     OUTPUT_NAME ${INCHI_FORMAT}
                     PREFIX "")
+
+ADD_DEPENDENCIES(${INCHI_FORMAT} obcore_shared)
 
 INSTALL(TARGETS
         ${INCHI_FORMAT}
